Start actually making config files

--- a/apps/demo-game/CMakeLists.txt
+++ b/apps/demo-game/CMakeLists.txt
@@ -3,6 +3,11 @@
 
 add_executable(game main.cpp)
 
+target_include_directories(game
+        PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
 target_link_libraries(game
         PRIVATE
         klingon
