--- a/libs/batleth/CMakeLists.txt
+++ b/libs/batleth/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(batleth SHARED
         src/image.cpp
         src/sampler.cpp
         src/image_utils.cpp
+        src/sync.cpp
 )
 
 target_include_directories(batleth
